--- a/portfolio-styling/css/style.css
+++ b/portfolio-styling/css/style.css
@@ -103,12 +103,7 @@ button:focus {
   justify-content: space-between;
   align-items: center;
   z-index: 1;
-  transition: all 300ms ease;
-}
-
-.header--dark {
-  background-color: var(--color-primary);
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  transition: background-color 300ms ease;
 }
 
 
@@ -116,14 +111,6 @@ button:focus {
   font-size: 1.8rem;
 }
 
-.header__toggle {
-  display: none;
-  color: var(--color-white);
-  font-size: 1.5rem;
-  position: absolute;
-  top: 1.3rem;
-  right: 1rem;
-}
 
 .header__menu {
   display: flex;
