--- a/portfolio-styling/css/style.css
+++ b/portfolio-styling/css/style.css
@@ -132,6 +132,9 @@ button:focus {
   border-radius: 4px;
 }
 
+.header_menu_mobile {
+  display: none;
+}
 /* Home */
 #home {
   position: relative;
@@ -271,7 +274,7 @@ button:focus {
 }
 
 .skills__coding {
-  grid-row: span 2;
+  grid-row: 2;
   padding: 1rem;
   background-color: var(--color-primary);
 }
@@ -478,7 +481,7 @@ button:focus {
   }
 
   .header {
-    flex-direction: column;
+    /* flex-direction: column; */
     align-items: start;
     background-color: var(--color-primary);
   }
@@ -497,6 +500,17 @@ button:focus {
 
   .header__menu.open {
     display: flex;
+  }
+
+  .header_menu_mobile {
+    padding-top: 50px;
+    padding-right: 150px;
+    display: flex;
+    /* flex-direction: row-reverse; */
+    flex-wrap: nowrap;
+    align-content: stretch;
+    justify-content: center;
+    align-items: center;
   }
 
   .header__nav {
@@ -539,14 +553,6 @@ button:focus {
 
   .projects {
     grid-template-columns: repeat(2, 1fr);
-  }
-
-  .testimonial {
-    flex-direction: column;
-  }
-
-  .testimonial:nth-child(even) .testimonial__img {
-    order: 0;
   }
 
   .arrow-up {
