--- a/portfolio-styling/css/style.css
+++ b/portfolio-styling/css/style.css
@@ -481,7 +481,7 @@ button:focus {
   }
 
   .header {
-    /* flex-direction: column; */
+    flex-direction: column;
     align-items: start;
     background-color: var(--color-primary);
   }
@@ -503,12 +503,9 @@ button:focus {
   }
 
   .header_menu_mobile {
-    padding-top: 50px;
-    padding-right: 150px;
     display: flex;
     /* flex-direction: row-reverse; */
     flex-wrap: nowrap;
-    align-content: stretch;
     justify-content: center;
     align-items: center;
   }
